# svalinn

./: .conflow.yaml  .gitattributes  .gitignore  .hypatia-baseline.json  .pre-commit-config.yaml  0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  CHECKLIST-QOL.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  ECOSYSTEM-STATUS.md  ECOSYSTEM.scm  EVALUATION-REPORT.adoc  EXPLAINME.adoc  INTEGRATION-STATUS.md  Justfile  LICENSE  META.scm  MVP.adoc  Mustfile  ONBOARDING_PLAN.adoc  PALIMPSEST.adoc  PHASE3-KICKOFF-2026-01-25.md  PHASE3-PLAN-2026-01-25.md  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  REFERENCE.adoc  ROADMAP.adoc  SEAM-ANALYSIS.md  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  deno.json  ecosystem.yaml  (+12 more)
.claude/: CLAUDE.md
.github/: dependabot.yml  pull_request_template.md
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.meta/: STATE.scm
.well-known/: security.txt
audits/: assail-classifications.a2ml  audit-jwt-decode-test-context-2026-05-26.md
benchmarks/: gateway_bench.ts  load_test.ts
config/: README-SECURITY.adoc
docs/: DEPLOYMENT.adoc  TESTING.adoc  cli-ux-compat.adoc  mental-model.adoc  security-roadmap.adoc  surface-contract.adoc  tech-debt-2026-05-26.md  troubleshooting.adoc  ui-mvp.adoc  ux-error-catalog.adoc
examples/: svalinn-compose.yaml
tools/mvp/svalinn-gate/: .gitignore  Cargo.toml
tools/mvp/svalinn-gate/src/: main.rs
(+508 files in other folders)
